add user change password and profile + refactor
